# cpSafety

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  information.txt
src/: copyH.c  copyH.h  fileHash.c  fileHash.h  main.c  main.h  print_info.c.in  temp.txt  tools.c  tools.h  xxhsum.c  xxhsum.h
test/destination/: CMakeCache.txt  Makefile  cmake_install.cmake  cpSafety.cbp
test/source/: main.c  main.h
